--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.88.4",
+    "@sanity/client": "^7.4.0",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.92.0",
     "framer-motion": "^10.16.4",
     "next": "14.1.0",
+    "next-sanity": "^9.12.0",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,14 +25,19 @@
     "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.12.2",
     "react-three-fiber": "^6.0.13",
+    "sanity": "^3.92.0",
+    "styled-components": "^6.1.18",
     "three": "^0.157.0",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3"
   }
 }
