--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.12.2",
     "react-three-fiber": "^6.0.13",
+    "rss-parser": "^3.13.0",
     "sanity": "^3.92.0",
     "styled-components": "^6.1.18",
     "three": "^0.157.0",
